Modified transistions logic
