# spring-server/src/main/java/io/pestakit/surveys/api/endpoints/QuestionsApiController.java
@@ -1,19 +1,22 @@
 package io.pestakit.surveys.api.endpoints;
 
 import io.pestakit.surveys.api.QuestionsApi;
+//import io.pestakit.surveys.entities.ChoiceEntity;
 import io.pestakit.surveys.entities.QuestionEntity;
+//import io.pestakit.surveys.model.Choice;
 import io.pestakit.surveys.model.Question;
 
+//import io.pestakit.surveys.repositories.ChoicesRepository;
 import io.pestakit.surveys.repositories.QuestionsRepository;
 import io.swagger.annotations.*;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
+import springfox.documentation.spring.web.json.Json;
 
 import java.net.URI;
 import java.util.ArrayList;
@@ -21,8 +24,6 @@ import java.util.List;
 
 import javax.validation.Valid;
 
-import static org.springframework.http.HttpStatus.CREATED;
-import static org.springframework.http.HttpStatus.OK;
 import static org.springframework.http.ResponseEntity.created;
 import static org.springframework.http.ResponseEntity.ok;
 
@@ -34,6 +35,8 @@ public class QuestionsApiController implements QuestionsApi {
     @Autowired
     QuestionsRepository questionsRepository;
 
+
+    @Override
     public ResponseEntity<Void> createQuestion(@ApiParam(value = "The question to be created" ,required=true )  @Valid @RequestBody Question question) {
         QuestionEntity entity = toQuestionEntity(question);
         questionsRepository.save(entity);
@@ -43,13 +46,13 @@ public class QuestionsApiController implements QuestionsApi {
         return created(location).build();
     }
 
-
-
+    @Override
     public ResponseEntity<Question> findQuestionById(@ApiParam(value = "ID of question to fetch",required=true ) @PathVariable("id_question") Long idQuestion) {
         Question question = toQuestion(questionsRepository.findOne(idQuestion));
         return ok(question);
     }
 
+    @Override
     public ResponseEntity<List<Question>> questionsGet() {
         List<Question> questions = new ArrayList<>();
         for (QuestionEntity entity : questionsRepository.findAll()){
@@ -76,4 +79,19 @@ public class QuestionsApiController implements QuestionsApi {
         return question;
     }
 
+
+
+//    public Choice toChoice(ChoiceEntity entity){
+//        Choice choice = new Choice();
+//        choice.setId(entity.getId());
+//        choice.setText(entity.getText());
+//        return choice;
+//    }
+//
+//    public ChoiceEntity toChoiceEntity(Choice choice){
+//        ChoiceEntity entity = new ChoiceEntity();
+//        entity.setId(choice.getId());
+//        entity.setText(choice.getText());
+//        return entity;
+//    }
 }
