# spring-server/target/classes/api-spec.yaml
@@ -10,13 +10,12 @@ schemes:
   - https
 
 basePath: /api
-produces:
-  - application/json
+
 paths:
   /questions:
     get:
       summary: All the questions
-      consumes: 
+      produces:
         - application/json
       responses:
         "200":
@@ -33,7 +32,7 @@ paths:
     post:
       description: Create a question
       operationId: createQuestion
-      produces:
+      consumes:
         - application/json
       parameters:
         - name: question
@@ -51,7 +50,7 @@ paths:
     get:
       description: Returns the identified question
       operationId: findQuestionById
-      consumes: 
+      produces:
         - application/json
       parameters:
         - name: id_question
@@ -81,16 +80,7 @@ definitions:
         type: string
       fields:
         type: string
-  
-  Choice:
-    type: object
-    properties:
-      id:
-        type: integer
-        format: int64
-      text: 
-        type: string
-  
+
   Question:
     type: object
     properties:
@@ -106,6 +96,4 @@ definitions:
         type: integer
         format: int32
       choices:
-        type: array
-        items:
-          $ref: '#/definitions/Choice'
+        type: string
